# secureguard

./: .env.example  .gitignore  BETA_CHECKLIST.md  CLAUDE.md  README.md  TEST_TOKENS.md  get_token.sh  test_api.sh  test_stripe.sh
.github/workflows/: ci.yml
admin/: CLAUDE.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts
admin/src/: middleware.ts
admin/src/app/: layout.tsx  page.tsx
admin/src/lib/: mock-data.ts  supabase.ts  utils.ts
admin/src/types/: index.ts
backend/: config.py  main.py  pyproject.toml  requirements.txt
backend/jobs/: check_agent_timeout.py  check_cancellations.py  check_sucamec_expiry.py
backend/middleware/: auth.py
backend/models/: payment.py  review.py  service.py  user.py
backend/routers/: agents.py  auth.py  messages.py  payments.py  reviews.py  services.py
backend/services/: badges.py  notifications.py  penalties.py  stripe.py  supabase.py  twilio.py
backend/tests/: test_auth.py  test_badges.py  test_integration.py  test_multiagent.py  test_payments.py  test_penalties.py  test_services.py  test_sos.py
mobile/: App.tsx  app.json  babel.config.js  eas.json  package-lock.json  package.json  start.sh
mobile/src/constants/: distritos.ts  serviceTypes.ts
mobile/src/hooks/: useAuth.ts  useRealtime.ts  useService.ts
mobile/src/lib/: api.ts  notifications.ts  supabase.ts
mobile/src/navigation/: AgentStack.tsx  AuthStack.tsx  ClientStack.tsx  OnboardingStack.tsx
supabase/migrations/: 000_drop_and_recreate.sql  001_initial_schema.sql  002_otp_tables.sql  003_services_payments.sql
(+76 files in other folders)
