[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secureguard-backend"
version = "0.1.0"
description = "SecureGuard — Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Supabase / PostgreSQL
    "supabase>=2.4.0",
    "asyncpg>=0.29.0",

    # Auth / JWT
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Twilio (OTP)
    "twilio>=9.0.0",

    # Stripe (pagos)
    "stripe>=9.0.0",

    # Config
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Background tasks / scheduling
    "apscheduler>=3.10.4",

    # Fechas / timezone Perú
    "pytz>=2024.1",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-pytz",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
